=======
CHANGES
=======

3.5.1 (unreleased)
------------------

- Removed DEPENDENCIES.cfg

3.5.0 (2009-01-31)
------------------

- Changed use of zope.app.container to zope.container.

3.4.0 (2007-10-02)
------------------

- Initial Zope-independent release.