@@ -52,7 +52,6 @@ setup(name='zope.filerepresentation',
                 ]),
       install_requires=['setuptools',
                         'zope.interface',
-                        'zope.container'
                         ],
       include_package_data=True,
       zip_safe=True,
